--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <nav>
-        <img src="https://via.placeholder.com/60" alt="" />
-        <ul class="nav">
-          <li class="nav__link"><a href="#">Home</a></li>
-          <li class="nav__link"><a href="#">Opción 1</a></li>
-          <li class="nav__link"><a href="#">Opción 2</a></li>
-        </ul>
-      </nav>
-    </div>
+    <nav>
+      <img src="assets/gardevoir.gif" class="logo" />
+      <ul class="nav">
+        <li class="nav__link"><a href="#">Inicio</a></li>
+        <li class="nav__link"><a href="#">Acerca de</a></li>
+        <li class="nav__link"><a href="#">Blog</a></li>
+        <li class="nav__nucba"><a href="#">NUCBA</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
