--- a/index.html
+++ b/index.html
@@ -14,14 +14,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <img src="assets/gardevoir.gif" class="logo" />
-      <ul class="nav">
-        <li class="nav__link"><a href="#">Inicio</a></li>
-        <li class="nav__link"><a href="#">Acerca de</a></li>
-        <li class="nav__link"><a href="#">Blog</a></li>
-        <li class="nav__nucba"><a href="#">NUCBA</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <img src="assets/gardevoir.gif" class="logo" />
+        <ul class="nav">
+          <li class="nav__link"><a href="#">Inicio</a></li>
+          <li class="nav__link"><a href="#">Acerca de</a></li>
+          <li class="nav__link"><a href="#">Blog</a></li>
+          <li class="nav__nucba"><a href="#">NUCBA</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section id="hero">
+        <div class="hero-info">
+          <h1>Your Company Slogan Here.</h1>
+          <p>
+            Add your company's tagline, profile its key mission, or describe its
+            range of products and services.
+          </p>
+<div>
+  <a href="#">CALL TO ACTION</a>
+  <a href="#">LEARN MORE</a>
+</div>
+        </div>
+        <div class="hero-card">
+          <img src="assets/logo.png" alt="logo" />
+          </div>
+        </div>
+      </section>
+
+    </main>
   </body>
 </html>
