--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
           </div>
         </div>
       </section>
-
+<section>
+  <div class="info-text">
+    <p>Breve introducción de la empresa de desarrollo capturando la identidad en 3 o 4 líneas. Contando a los potenciales clientes qué tipo de experiencia obtendrían si te eligen. Describir lso valores del equipo y los trbajos que inspiran. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, adipisci sit perferendis alias est explicabo voluptatibus facilis laboriosam deleniti reiciendis repellendus a minus debitis dolores illo incidunt quae, tempora quam.</p>
+  </div>
+</section>
     </main>
   </body>
 </html>
