--- a/index.html
+++ b/index.html
@@ -49,6 +49,37 @@
     <p>Breve introducción de la empresa de desarrollo capturando la identidad en 3 o 4 líneas. Contando a los potenciales clientes qué tipo de experiencia obtendrían si te eligen. Describir lso valores del equipo y los trbajos que inspiran. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, adipisci sit perferendis alias est explicabo voluptatibus facilis laboriosam deleniti reiciendis repellendus a minus debitis dolores illo incidunt quae, tempora quam.</p>
   </div>
 </section>
+<section id="info">
+  <h2>Our Advantages</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+  <div class="info-cards-container">
+    <div class="info-card">
+      <img src="assets/info-icon.png" alt="" />
+      <h3>Configura tu Wallet</h3>
+      <p>
+        Una vez que haya configurado la billetera de su elección,
+        conectela a Opensea.
+      </p>
+    </div>
+    <div class="info-card">
+      <img src="assets/info-icon.png" alt="" />
+      <h3>Agregá tus NFTs</h3>
+      <p>
+        Una vez que haya configurado la billetera de su elección, busca
+        los NFT de Sabri y adquiere los que más te gusten.
+      </p>
+    </div>
+    <div class="info-card">
+      <img src="assets/info-icon.png" alt="" />
+      <h3>¡Coleccionalos!</h3>
+      <p>
+        A partir de ahora, formás parte de la comunidad de Sabri NFT y vas
+        a poder acceder a contenidos educativos exclusivos sobre el mundo
+        crypto.
+      </p>
+    </div>
+  </div>
+</section>
     </main>
   </body>
 </html>
