--- a/index.html
+++ b/index.html
@@ -54,28 +54,24 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
   <div class="info-cards-container">
     <div class="info-card">
-      <img src="assets/info-icon.png" alt="" />
-      <h3>Configura tu Wallet</h3>
+      <img src="assets/info.icon-corazon.png" alt="" />
+      <h3>Benefit 1</h3>
       <p>
-        Una vez que haya configurado la billetera de su elección,
-        conectela a Opensea.
+        Beneficio explicando por qué deberían preferirte a vos y a tu laburo en vez de elegir a otro.
       </p>
     </div>
     <div class="info-card">
-      <img src="assets/info-icon.png" alt="" />
-      <h3>Agregá tus NFTs</h3>
+      <img src="assets/info.icon-corazon.png" alt="" />
+      <h3>Benefit 2</h3>
       <p>
-        Una vez que haya configurado la billetera de su elección, busca
-        los NFT de Sabri y adquiere los que más te gusten.
+        Beneficio explicando por qué deberían preferirte a vos y a tu laburo en vez de elegir a otro. 
       </p>
     </div>
     <div class="info-card">
-      <img src="assets/info-icon.png" alt="" />
-      <h3>¡Coleccionalos!</h3>
+      <img src="assets/info.icon-corazon.png" alt="" />
+      <h3>Benefit 3</h3>
       <p>
-        A partir de ahora, formás parte de la comunidad de Sabri NFT y vas
-        a poder acceder a contenidos educativos exclusivos sobre el mundo
-        crypto.
+        Beneficio explicando por qué deberían preferirte a vos y a tu laburo en vez de elegir a otro.
       </p>
     </div>
   </div>
