--- a/index.html
+++ b/index.html
@@ -77,5 +77,38 @@
   </div>
 </section>
     </main>
+    <footer>
+      <div class="contact">
+        <h2>Contact Us</h2>
+        <div class="footer-contact">
+          <div class="contact-inside">
+            <h4>Dirección 1</h4>
+            <ul class="footer-ul1">
+              <li>📍 &nbsp;&nbsp;Calle falsa 123</li>
+              <li>✉️ mail@gmail.com</li>
+              <li>📞 011 1234 5678</li>
+            </ul>
+          </div>
+          <div class="contact-inside">
+            <h4>Dirección 2</h4>
+            <ul>
+              <li>📍 &nbsp;&nbsp;Calle falsa 123</li>
+              <li>✉️ mail@gmail.com</li>
+              <li>📞 011 1234 5678</li>
+            </ul>
+          </div>
+          <div class="contact-inside">
+            <iframe width="300" height="170" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Libertad%20976+(Mi%20nombre%20de%20egocios)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe>
+          </div>
+        </div>
+        <div class="logo-redes">
+          <a href="https://www.facebook.com">
+            <img src="./assets/facebook2.png" alt="logo facebook"></a>
+          <a href="#"> <img src="assets/instagram2.png" alt="logo ig"></a>
+          <a href="#">
+            <img src="assets/gorjeo.png" alt="logo tweeter"></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
