--- a/index.html
+++ b/index.html
@@ -110,5 +110,8 @@
         </div>
       </div>
     </footer>
+    <div class="div-logo">
+      <h6>Hecho con ♡ Sabri para NUCBA- 2023</h6>
+    </div>
   </body>
 </html>
