--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <li>📞 011 1234 5678</li>
             </ul>
           </div>
-          <div class="contact-inside">
+          <div class="contact-map">
             <iframe width="300" height="170" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Libertad%20976+(Mi%20nombre%20de%20egocios)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe>
           </div>
         </div>
